--- a/src/components/ControlPane/ControlPane.module.css
+++ b/src/components/ControlPane/ControlPane.module.css
@@ -30,6 +30,11 @@
 @media (max-width: 768px) {
   .controlPane {
     max-width: 512px;
-    width: 80vw;
+    min-width: 80vw;
+  }
+
+  .title {
+    position: sticky;
+    left: 0px;
   }
 }
